# brasero

./: .gitlab-ci.yml  AUTHORS  COPYING  ChangeLog  ChangeLog.old  MAINTAINERS  Makefile.am  NEWS  README  autogen.sh  brasero.doap  brasero.spec  configure.ac  configure.in  libbrasero-burn.pc.in  libbrasero-burn3.pc.in  libbrasero-media.pc.in  libbrasero-media3.pc.in
brasero-media/: Makefile.am  brasero-drive-selection.c  brasero-drive-selection.h  brasero-medium-monitor.c  brasero-medium-selection.c  brasero-medium-selection.h  brasero-medium.h  brasero-volume.h  burn-drive.h  burn-hal-watch.c  burn-iso9660.c  burn-media.c  burn-media.h  burn-medium-monitor.c  burn-medium-monitor.h  burn-medium.h  burn-units.c  burn-units.h  burn-volume-obj.c  burn-volume-source.c  burn-volume.c  burn-volume.h  scsi-cam.c  scsi-dvd-structures.h  scsi-read-capacity.h  scsi-read-format-capacities.h  scsi-read-toc-pma-atip.c  scsi-read-toc-pma-atip.h  scsi-sbc.h  scsi-uscsi.c  scsi-utils.h
data/: Makefile.am  brasero-copy-medium.desktop.in.in  brasero-nautilus.desktop.in.in  brasero-open-image.desktop.in.in  brasero-open-playlist.desktop.in.in  brasero-open-project.desktop.in.in  brasero.appdata.xml.in  brasero.convert  brasero.desktop.in  brasero.desktop.in.in  brasero.schemas.in  brasero.xml.in  org.gnome.brasero.gschema.xml  org.gnome.brasero.gschema.xml.in  thunar-sendto-brasero.desktop.in.in
data/icons/: Makefile.am  hicolor_actions_16x16_transform-crop-and-resize.xcf.bz2  hicolor_actions_22x22_transform-crop-and-resize.xcf.bz2
data/mime/: Makefile.am
help/: ChangeLog  Makefile.am  brasero.omf.in
help/C/: Makefile.am  brasero.xml  create-cover.page  index.page  introduction.page  prob-cd.page  prob-dvd.page  project-audio.page  project-data.page  project-disc-copy.page  project-image-burn.page  project-save.page  project-video.page  split-track.page  tools-blank.page  tools-check-integrity.page
help/bg/: bg.po
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/en_GB/: en_GB.po
help/es/: es.po
help/eu/: eu.po
help/fi/: fi.po
help/fr/: fr.po
help/gl/: gl.po
help/hu/: hu.po
help/id/: id.po
help/it/: it.po
help/ja/: ja.po
help/ko/: ko.po
help/lv/: lv.po
help/pl/: pl.po
help/pt/: pt.po
help/pt_BR/: pt_BR.po
help/ro/: ro.po
help/ru/: ru.po
help/sl/: sl.po
help/sv/: sv.po
help/te/: te.po
help/uk/: uk.po
help/zh_CN/: zh_CN.po
help/zh_HK/: zh_HK.po
help/zh_TW/: zh_TW.po
libbrasero-burn/: Makefile.am  brasero-blank-dialog.c  brasero-blank-dialog.h  brasero-burn-dialog.c  brasero-burn-dialog.h  brasero-burn-lib.h  brasero-burn-lib.h.in  brasero-burn-options-private.h  brasero-burn-options.c  brasero-burn-options.h  brasero-burn.c  brasero-burn.h  brasero-burn.h.in  brasero-caps-burn.c  brasero-caps-burn.h  brasero-caps-plugin.c  brasero-caps-session.c  brasero-cover.c  brasero-cover.h  brasero-data-options.c  brasero-data-options.h  brasero-data-project.c  brasero-data-project.h  brasero-data-session.c  brasero-data-session.h  brasero-data-tree-model.c  brasero-data-tree-model.h  brasero-data-vfs.c  brasero-data-vfs.h  brasero-dest-selection.c  brasero-dest-selection.h  brasero-disc-copy-dialog.c  brasero-disc-copy-dialog.h  brasero-disc-option-dialog.c  brasero-disc-option-dialog.h  brasero-drive-properties.c  brasero-drive-properties.h  brasero-enums.h  brasero-error.h  brasero-file-monitor.c  (+97 more)
libbrasero-media/: COPYING  Makefile.am  brasero-drive-priv.h  brasero-drive-selection.c  brasero-drive-selection.h  brasero-drive.c  brasero-drive.h  brasero-gio-operation.c  brasero-gio-operation.h  brasero-media-private.h  brasero-media.c  brasero-media.h  brasero-media.h.in  brasero-medium-monitor.c  brasero-medium-monitor.h  brasero-medium-selection-priv.h  brasero-medium-selection.c  brasero-medium-selection.h  brasero-medium.c  brasero-medium.h  brasero-units.c  brasero-units.h  brasero-volume.c  brasero-volume.h  burn-hal-watch.c  burn-hal-watch.h  burn-iso-field.c  burn-iso-field.h  burn-iso9660.c  burn-iso9660.h  burn-susp.c  burn-susp.h  burn-volume-source.c  burn-volume-source.h  burn-volume.c  burn-volume.h  scsi-base.h  scsi-cam.c  scsi-command.h  scsi-device.h  (+47 more)
libbrasero-utils/: Makefile.am  brasero-async-task-manager.c  brasero-async-task-manager.h  brasero-disc-message.c  brasero-disc-message.h  brasero-io.c  brasero-io.h  brasero-jacket-background.c  brasero-jacket-background.h  brasero-jacket-buffer.c  brasero-jacket-buffer.h  brasero-jacket-edit.c  brasero-jacket-edit.h  brasero-jacket-font.c  brasero-jacket-font.h  brasero-jacket-view.c  brasero-jacket-view.h  brasero-metadata.c  brasero-metadata.h  brasero-misc.c  brasero-misc.h  brasero-notify.c  brasero-notify.h  brasero-pk.c  brasero-pk.h  brasero-tool-color-picker.c  brasero-tool-color-picker.h
nautilus/: Makefile.am  brasero-nautilus.desktop.in  brasero-nautilus.desktop.in.in  nautilus-burn-bar.c  nautilus-burn-bar.h  nautilus-burn-extension.c
plugins/: Makefile.am
plugins/audio2cue/: Makefile.am  burn-audio2cue.c
plugins/cdrdao/: Makefile.am  burn-cdrdao-common.h  burn-cdrdao.c  burn-cdrdao.h  burn-toc2cue.c  burn-toc2cue.h
po/: ab.po  (+93 more)
src/: Makefile.am  async-job-manager.c  async-job-manager.h  audio-disc.c  baobab-cell-renderer-progress.c  baobab-cell-renderer-progress.h  blank-dialog.c  blank-dialog.h  bonfire-marshal.c  bonfire-marshal.h  brasero-app.c  brasero-app.h  brasero-async-task-manager.c  brasero-async-task-manager.h  brasero-audio-disc.c  brasero-audio-disc.h  brasero-blank-dialog.c  brasero-blank-dialog.h  brasero-burn-dialog.c  brasero-burn-dialog.h  brasero-burn-options.c  brasero-burn-options.h  brasero-cli.c  brasero-cli.h  brasero-data-disc.c  brasero-data-disc.h  brasero-data-project.c  brasero-data-project.h  brasero-data-session.c  brasero-data-session.h  brasero-data-tree-model.c  brasero-data-tree-model.h  brasero-data-vfs.c  brasero-data-vfs.h  brasero-dest-selection.c  brasero-dest-selection.h  brasero-disc-copy-dialog.c  brasero-disc-copy-dialog.h  brasero-disc-message.c  brasero-disc-message.h  (+334 more)
(+250 files in other folders)
